--- a/pet-clinic-web/src/main/resources/templates/owners/index.html
+++ b/pet-clinic-web/src/main/resources/templates/owners/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
+<html lang="en" xmlns:th="http://www.w3.org/1999/xhtml" th:replace="~{fragments/layout :: layout (~{::body},'home')}">
 <head>
     <meta charset="UTF-8">
     <title>List of Owners</title>
 </head>
 <body>
-<h1 th:text="'List of owners'">Owners list</h1>
-<table>
+<h2 th:text="'List of owners'">Owners list</h2>
+<table class="table table-striped">
     <thead>
     <tr>
         <th>ID</th>
